--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,11 +3,12 @@
         {
             "type": "cppbuild",
             "label": "C/C++: g++-13 build active file",
-            "command": "/usr/bin/g++-13",
+            "command": "/usr/bin/g++",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
+                "-std=c++23",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
